# ada_feeding

./: .gitignore  .pylintrc  CMakeLists.txt  Demo-start.py  LICENSE  LICENSE.md  README.md  blue_color_detector.py  computeOffsetVector.py  computePlateLocatorOffset.py  compute_offset_vector.py  configure_lovelace.sh  cyclonedds.xml  find_image_center.py  get_ros_image.py  package.xml  plateLocation.cpp  requirements.txt  run_camera.sh  run_nano_bridge.sh  run_plate_locator.py  start.py  start_nano.py  start_nano.sh
ada_feeding/: CMakeLists.txt  README.md  package.xml
ada_feeding/ada_feeding/: __init__.py  action_server_bt.py  ada_watchdog_listener.py  helpers.py
ada_feeding/ada_feeding/behaviors/: __init__.py  blackboard_behavior.py  compute_fk.py  compute_move_to_mouth_position.py  modify_collision_object.py  move_above_plate.py  move_collision_object.py  move_to.py  move_to_configuration.py  move_to_dummy.py  move_to_pose.py  ros_utility.py  toggle_collision_object.py
ada_feeding/ada_feeding/decorators/: __init__.py  clear_constraints.py  force_status.py  move_to_constraint.py  on_preempt.py  set_joint_goal_constraint.py  set_joint_path_constraint.py  set_orientation_goal_constraint.py  set_orientation_path_constraint.py  set_pose_goal_constraint.py  set_position_goal_constraint.py  set_position_path_constraint.py  timeout_from_blackboard.py
ada_feeding/ada_feeding/idioms/: __init__.py  add_pose_path_constraints.py  bite_transfer.py  (+7 more)
ada_feeding/assets/: bed_with_back.stl  bed_without_back.stl  body_collision_in_bed.stl  hospital_table.stl  table.stl
ada_feeding/config/: ada_feeding_action_servers.yaml  ada_feeding_action_servers_current.yaml  ada_feeding_action_servers_custom.yaml  ada_feeding_action_servers_default.yaml  ada_planning_scene.yaml  ada_watchdog.yaml  config.yaml  feeding_goal_config.yaml  gen2_feeding_config.yaml
ada_feeding/launch/: ada_feeding_launch.xml
ada_feeding/scripts/: ada_keyboard_teleop.py  ada_planning_scene.py  ada_watchdog.py  ada_watchdog_listener_node.py  create_action_servers.py  dummy_ft_sensor.py  get_pose.py  gripper_tf2_listener.py  joint_state_latency.py  joint_state_service.py  robot_state_service.py  save_image.py
ada_feeding/src/: servo_keyboard_input.cpp
ada_feeding/tests/: helpers.py  test_eventually_swiss.py  test_scoped_behavior.py
ada_feeding_action_select/: package.xml  setup.cfg  setup.py
ada_feeding_action_select/ada_feeding_action_select/: helpers.py  policy_service.py
ada_feeding_action_select/config/: acquisition_library.yaml  acquisition_library.yaml.orig  color_map.yaml  full_acquisition_library.yaml  policies.yaml  spoon_acquisition_library.yaml
ada_feeding_action_select/launch/: ada_feeding_action_select_launch.xml  ada_feeding_actionselect_launch.xml
ada_feeding_action_select/scripts/: modify_ac_library.py
ada_feeding_msgs/: CMakeLists.txt  package.xml
ada_feeding_msgs/action/: AcquireFood.action  ActivateController.action  DetectFace.action  DetectFood.action  MoveTo.action  MoveToConfiguration.action  MoveToMouth.action  MoveToOffset.action  SegmentAllItems.action  SegmentFromPoint.action  Teleoperate.action  Trigger.action
ada_feeding_msgs/msg/: AcquisitionSchema.msg  FaceDetection.msg  FoodOnForkDetection.msg  Mask.msg
ada_feeding_msgs/srv/: AcquisitionReport.srv  AcquisitionSelect.srv  GetJointState.srv  GetPoseStamped.srv  GetRobotState.srv  GetSettings.srv  ModifyCollisionObject.srv  PoseStamped.srv  SetSettings.srv  ToggleFaceDetection.srv
ada_feeding_perception/: README.md  install.sh  package.xml  requirements.txt  setup.cfg  setup.py
ada_feeding_perception/ada_feeding_perception/: Crop_Images.py  Master_with_labels_8-30-23.csv  Notes.md  ParseImagesFromRosbag.py  Parse_Rosbag_RGBImage.py  SegmentFromPoint.py  ada_feeding_perception_node.py  check_alignment_img_overlay.py  depth_post_processors.py  face_detection.py  food_on_fork.py  food_on_fork2.py  food_on_fork3.py  food_on_fork_categorical_naive_bayes_training.py  food_on_fork_detection.py  food_on_fork_detectors.py  food_on_fork_logistic_reg_training.py  food_on_fork_train_test.py  helpers.py  republisher.py  segment_all_items.py  segment_from_point.py  table_detection.py  test_efficient_sam.py  test_sam.py  test_segment_from_point.py
ada_feeding_perception/config/: face_detection.yaml  food_on_fork.yaml  food_on_fork_detection.yaml  republisher.yaml  segment_all_items.yaml  segment_from_point.yaml  table_detection.yaml  test_segment_from_point.yaml
ada_feeding_perception/datasets/: Crop_Images.py  Master_with_labels_10-17-23.csv  ParseImagesFromRosbag.py
ada_feeding_perception/launch/: ada_feeding_perception.launch.py  ada_feeding_perception_launch.xml  test_food_segmentation_launch.xml
ada_feeding_perception/model/: categorical_naive_bayes_aligned_depth_10-17-23.pkl  categorical_naive_bayes_without_hand_8-30-23.pkl  categorical_naive_bayes_without_hand_model.pkl  categorical_naive_bayes_without_hand_without_plate_model.pkl  distance_no_fof_detector_with_filters.npz  logistic_reg_model.pkl  pointcloud_t_test_detector.npz
ada_feeding_perception/test/: test_sam.py
ada_planning_scene/: package.xml  setup.cfg  setup.py
ada_planning_scene/ada_planning_scene/: ada_planning_scene.py  collision_object_manager.py  helpers.py  planning_scene_initializer.py  update_from_face_detection.py  update_from_table_detection.py  workspace_walls.py
ada_planning_scene/assets/: bed_with_back.stl  bed_without_back.stl  body_collision_in_bed.stl  body_collision_in_wheelchair.stl  hospital_table.stl  person_laying_in_bed.stl  tom.stl  wheelchair.stl
ada_planning_scene/config/: ada_planning_scene.yaml
ada_planning_scene/launch/: ada_moveit_launch.xml  ada_planning_scene_launch.xml
nano_bridge/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
nano_bridge/config/: nano_bridge.yaml
nano_bridge/launch/: receiver.launch.xml  sender.launch.xml
nano_bridge/msg/: CompressedImage.msg
nano_bridge/nano_bridge/: helpers.py  receiver.py  receiver_compressed_image.py  sender.py  sender_compressed_image.py
(+335 files in other folders)
