<?xml version="1.0"?>
<package format="2">
  <name>ada_feeding</name>
  <version>0.2.0</version>
  <description>Assistive Feeding on ADA</description>
  <license>BSD</license>

  <maintainer email="ekgordon@cs.uw.edu">Ethan Gordon</maintainer>

  <depend>dartsim</depend>
  <depend>eigen</depend>
  <depend>aikido</depend>
  <depend>libada</depend>

  <depend>ada_description</depend>
  <depend>pr_assets</depend>
  <depend>pr_tsr</depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <!--For plate locator service-->>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>


  <!-- For simulated food/face -->
  <exec_depend>pose_estimators</exec_depend>

  <!-- This is required by REP-136. -->
  <exec_depend>catkin</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>cmake</buildtool_depend>
  <buildtool_depend>clang-format</buildtool_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
