<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ada_feeding</name>
  <version>0.0.0</version>
  <description>Contains all the code to run the feeding code on ADA, except for perception.</description>
  <maintainer email="amaln@uw.edu">Amal Nanavati</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>rcl_interfaces</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>pymoveit2</exec_depend>

  <depend>std_srvs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
