<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ada_feeding_action_select</name>
  <version>0.0.0</version>
  <description>Framework for selecting motion primitives (e.g. food acquisition actions) from food visual and haptic information.</description>
  <maintainer email="ekgordon@cs.washington.edu">Ethan K. Gordon</maintainer>
  <license>BSD-3-Clause</license>

  <depend>rclpy</depend>
  <depend>ada_feeding_msgs</depend>

  <exec_depend>python3-yaml</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
