<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ada_feeding_perception</name>
  <version>0.0.0</version>
  <description>This package contains all the perception code (face and food perception) for the robot feeding system.</description>
  <maintainer email="haozhu@cs.washington.edu">Bernie Zhu</maintainer>
  <license>BSD-3-Clause</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>compressed_image_transport</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-pandas</exec_depend>
  <!-- NOTE Version 0.9.19 of rosbags specifically is necessary. rosdep does not
  provide a way to install specific versions. https://gitlab.com/ternaris/rosbags/-/issues/73 -->
  <!-- <exec_depend>python3-rosbags-pip</exec_depend> -->
  <exec_depend>python3-scikit-spatial-pip</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-shapely</exec_depend>
  <exec_depend>python3-skimage</exec_depend>
  <exec_depend>python3-torch</exec_depend>
  <exec_depend>python3-torchvision</exec_depend>
  <exec_depend>python-transforms3d-pip</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
