<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ada_planning_scene</name>
  <version>0.0.0</version>
  <description>This package contains node(s) for managing ADA\'s MoveIt2 planning scene.</description>
  <maintainer email="amaln@uw.edu">Amal Nanavati</maintainer>
  <license>BSD-3-Clause</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>python3-trimesh-pip</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
